bug: modal overflow hidden

--- a/packages/app/src/Element/Modal.css
+++ b/packages/app/src/Element/Modal.css
@@ -19,5 +19,4 @@
   border: 1px solid var(--font-tertiary-color);
   margin-top: auto;
   margin-bottom: auto;
-  overflow: hidden;
 }
